--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.3.7",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
+    "history": "^5.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.12.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
